# MatterApi

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  endpoints.rst  getting_started.rst  index.rst  websocket.rst
docs/source/client/: async_client.rst  base_client.rst  client.rst  driver.rst  exceptions.rst  index.rst  sync_client.rst
docs/source/driver/: async_driver.rst  base_driver.rst  client.rst  driver.rst  exceptions.rst  index.rst  sync_driver.rst
docs/source/endpoints/: async_authentication.rst  async_bleve.rst  async_bots.rst  async_brand.rst  async_channels.rst  async_cloud.rst  async_cluster.rst  async_commands.rst  async_compliance.rst  async_data_retention.rst  async_elasticsearch.rst  async_emoji.rst  async_exports.rst  async_files.rst  async_groups.rst  async_imports.rst  async_index.rst  async_integration_actions.rst  async_jobs.rst  async_ldap.rst  async_migrate.rst  async_oauth.rst  async_open_graph.rst  async_permissions.rst  async_plugins.rst  async_posts.rst  async_preferences.rst  async_reactions.rst  async_roles.rst  async_root.rst  async_saml.rst  async_schemes.rst  async_search.rst  async_shared_channels.rst  async_status.rst  async_system.rst  async_teams.rst  async_terms_of_service.rst  async_threads.rst  async_uploads.rst  (+44 more)
docs/source/models/: index.rst
matterapi/: __init__.py  enums.py  models.py  types.py
matterapi/client/: async_client.py  base.py  exceptions.py  sync_client.py
matterapi/driver/: async_driver.py  base.py  client.py  exceptions.py  sync_driver.py
matterapi/endpoints/: base.py
matterapi/endpoints/async_api/: authentication.py  bleve.py  bots.py  brand.py  channels.py  cloud.py  cluster.py  commands.py  compliance.py  data_retention.py  elasticsearch.py  emoji.py  exports.py  files.py  groups.py  imports.py  integration_actions.py  jobs.py  ldap.py  migrate.py  oauth.py  open_graph.py  permissions.py  plugins.py  posts.py  preferences.py  reactions.py  roles.py  root.py  saml.py  schemes.py  search.py  shared_channels.py  status.py  system.py  teams.py  terms_of_service.py  threads.py  uploads.py  users.py  (+1 more)
matterapi/endpoints/sync_api/: __init__.py  authentication.py  bleve.py  bots.py  brand.py  channels.py  cloud.py  cluster.py  commands.py  compliance.py  data_retention.py  elasticsearch.py  emoji.py  exports.py  files.py  groups.py  imports.py  integration_actions.py  jobs.py  (+23 more)
